Fixed the spacing below the comments section

--- a/css/style.css
+++ b/css/style.css
@@ -259,6 +259,7 @@ footer {
 	text-align: left;
 	margin-left: 25%;
 	margin-right: 25%;
+	margin-bottom: 5%;
 }
 .clear {
 	clear:both;
